<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse110.jamwithme.UserProfileActivity">

    <TextView
        android:text="@string/exp_lvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tVExperience"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/eTName"
        android:layout_toLeftOf="@+id/ratingBar"
        android:layout_toStartOf="@+id/ratingBar" />

    <Button
        android:text="@string/addjams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_my_jams"
        android:background="?attr/actionModeSplitBackground"
        android:textColor="@android:color/white"
        android:layout_alignBaseline="@+id/Profile_add_button"
        android:layout_alignBottom="@+id/Profile_add_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/eTBiography"
        android:layout_toEndOf="@+id/eTBiography" />

    <Button
        android:text="@string/addI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Profile_add_button"
        android:background="?attr/actionModeSplitBackground"
        android:textColor="@android:color/white"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/ratingBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/actionModeSplitBackground"
        android:textColor="@android:color/white"
        android:id="@+id/save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:scaleX="5"
        android:scaleY="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/alert_light_frame"
        android:id="@+id/ivProfile"
        android:layout_marginTop="82dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:id="@+id/camButton"
        android:layout_alignTop="@+id/ivProfile"
        android:layout_toLeftOf="@+id/save_button"
        android:layout_toStartOf="@+id/save_button"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="21dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/eTName"
        android:hint="@string/uname"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/ivProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/instruments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Profile_add_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:id="@+id/tvInstruments"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textPersonName"
        android:ems="10"
        android:id="@+id/eTBiography"
        android:hint="@string/bio"
        android:maxLength="500"
        android:layout_below="@+id/tvInstruments"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:layout_alignRight="@+id/camButton"
        android:layout_alignEnd="@+id/camButton" />

</RelativeLayout>
